[package]
name = "vdf_snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman-bignat = {package = "bellman-bignat", git ="https://github.com/alex-ozdemir/bellman-bignat", branch = "master"}
rug = {version = "1.15.0", default-features = false, features = ["integer", "serde", "rand"]}
num-primes ="0.3.0"

[dev-dependencies]
poseidon-rs = "0.0.8"
#ark-sponge = "0.3.0"
ark-sponge =  { package = "ark-sponge", git="https://github.com/arkworks-rs/sponge", branch = "master"}
ark-ff = "0.3.0"
ark-test-curves =  { version = "^0.3.0", features = ["bls12_381_curve", "mnt4_753_curve"]}
ark-std = "0.3.0"

dusk-poseidon = "0.22.0"
dusk-bls12_381 = {version = "0.9", default-features = false}
dusk-bytes = "0.1"
dusk-plonk = {version="0.10", default-features = false, features = ["alloc"]}